# rampa

./: .dockerignore  .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/apps/accounts/: urls.py  views.py
backend/apps/common/: errors.py
backend/apps/projects/: access.py  models.py  serializers.py  urls.py  views.py
backend/apps/surveys/: apps.py  deletion.py  models.py  resolution.py  serializers.py  tasks.py  tasks_maintenance.py  urls.py  views_hooks.py  views_options.py  views_surveys.py  views_uploads.py
backend/config/: celery.py  settings.py  urls.py
backend/pipeline/: README.md  errors.py  options.py  storage.py
backend/pipeline/stages/: context.py  reproject.py  surfaces.py  validate.py
backend/tests/: conftest.py
backend/tests/fixtures/: make_fixtures.py
backend/tests/integration/: test_access_boundaries.py  test_access_deletion_scope.py  test_additional_options.py  test_api_artifacts_products.py  test_api_ingest.py  test_api_ingest_selection.py  test_api_options_catalog.py  test_api_status_retry.py  test_api_uploads_resume.py  test_coexistence.py  test_dummy_option_e2e.py  test_membership_api.py  test_membership_migration.py  test_option_deactivation.py  test_options_backfill.py  test_per_option_publication.py  test_project_deletion.py  test_purge_expired_deletions.py  test_real_laz_ingest.py  test_recently_deleted_and_restore.py  test_survey_deletion.py  test_upload_deletion.py
backend/tests/unit/: test_artifact_resolution.py  test_failure_codes.py  test_options_registry.py  test_stage_reproject.py  test_stage_surfaces.py  (+2 more)
(+127 files in other folders)
